--- a/.gitignore
+++ b/.gitignore
@@ -131,5 +131,5 @@ dmypy.json
 kata_pokemon_enunciados.sql
 kata_pokemon_soluciones.sql
 TallerSQL.pdf
-\SQL\sql-pokemon-workshop\README.md
+\SQL
 Workspace.code-workspace
